fix home page bullet point alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -31,6 +31,14 @@ nav>button {
     font-size: 2.75em;
 }
 
+ul {
+    list-style-type: '- ';
+}
+
+li {
+    margin-bottom: 10px;
+}
+
 #logo {
     align-self: center;
 
@@ -86,9 +94,16 @@ nav>button {
 }
 
 #description *,
-#hours * {
+#hours h2,
+ul {
     justify-self: center;
 }
+
+#menu-title {
+    align-self: center;
+    margin-bottom: -15px;
+}
+
 
 #about {
     display: flex;
@@ -106,5 +121,3 @@ nav>button {
     margin-top: auto;
     text-align: center;
 }
-
-/* TODO change bullets to dashes */
